errors.txt
Ψ Compiling keymap with gmake --jobs=1 askcorne:default


QMK Firmware 0.19.10
⚠ askcorne: UNUSED_PINS in config.h is deprecated and will be removed at a later date
⚠ askcorne: PRODUCT_ID in config.h is deprecated in favor of `usb.pid` in info.json and will be removed at a later date
⚠ askcorne: VENDOR_ID in config.h is deprecated in favor of `usb.vid` in info.json and will be removed at a later date
⚠ askcorne: PRODUCT in config.h is deprecated in favor of `keyboard_name` in info.json and will be removed at a later date
⚠ askcorne: MANUFACTURER in config.h is deprecated in favor of `manufacturer` in info.json and will be removed at a later date
⚠ askcorne: DEVICE_VER in config.h is deprecated in favor of `usb.device_version` in info.json and will be removed at a later date
⚠ askcorne: Split main hand is specified in both config.h (MASTER_LEFT) and info.json (split.main) (Value: eeprom), the config.h value wins.
☒ askcorne: MATRIX_ROWS is inconsistent with the size of MATRIX_ROW_PINS: 4 != 12
WARNING: Some git submodules are out of date or modified.
 Please consider running make git-submodule.

Making askcorne with keymap default

⚠ askcorne: UNUSED_PINS in config.h is deprecated and will be removed at a later date
⚠ askcorne: PRODUCT_ID in config.h is deprecated in favor of `usb.pid` in info.json and will be removed at a later date
⚠ askcorne: VENDOR_ID in config.h is deprecated in favor of `usb.vid` in info.json and will be removed at a later date
⚠ askcorne: PRODUCT in config.h is deprecated in favor of `keyboard_name` in info.json and will be removed at a later date
⚠ askcorne: MANUFACTURER in config.h is deprecated in favor of `manufacturer` in info.json and will be removed at a later date
⚠ askcorne: DEVICE_VER in config.h is deprecated in favor of `usb.device_version` in info.json and will be removed at a later date
⚠ askcorne: Split main hand is specified in both config.h (MASTER_LEFT) and info.json (split.main) (Value: eeprom), the config.h value wins.
☒ askcorne: MATRIX_ROWS is inconsistent with the size of MATRIX_ROW_PINS: 4 != 12
avr-gcc (Homebrew AVR GCC 8.4.0_2) 8.4.0
Copyright (C) 2018 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

Compiling: keyboards/askcorne/askcorne.c                                                            [OK]
Compiling: .build/obj_askcorne/src/default_keyboard.c                                               [OK]
Compiling: quantum/keymap_introspection.c                                                           [OK]
Compiling: quantum/quantum.c                                                                        [OK]
Compiling: quantum/bitwise.c                                                                        [OK]
Compiling: quantum/led.c                                                                            [OK]
Compiling: quantum/action.c                                                                         [OK]
Compiling: quantum/action_layer.c                                                                   [OK]
Compiling: quantum/action_tapping.c                                                                 [OK]
Compiling: quantum/action_util.c                                                                    [OK]
Compiling: quantum/eeconfig.c                                                                       [OK]
Compiling: quantum/keyboard.c                                                                       [OK]
Compiling: quantum/keymap_common.c                                                                  [OK]
Compiling: quantum/keycode_config.c                                                                 [OK]
Compiling: quantum/sync_timer.c                                                                     [OK]
Compiling: quantum/logging/debug.c                                                                  [OK]
Compiling: quantum/logging/sendchar.c                                                               [OK]
Compiling: quantum/bootmagic/magic.c                                                                [OK]
Compiling: quantum/matrix_common.c                                                                  [OK]
Compiling: quantum/matrix.c                                                                         [OK]
Compiling: quantum/debounce/sym_defer_g.c                                                           [OK]
Compiling: quantum/split_common/split_util.c                                                        [OK]
Compiling: quantum/split_common/transport.c                                                         [OK]
Compiling: quantum/split_common/transactions.c                                                      [OK]
Compiling: quantum/main.c                                                                           [OK]
Compiling: quantum/mousekey.c                                                                       [OK]
Compiling: quantum/crc.c                                                                            [OK]
Compiling: quantum/process_keycode/process_magic.c                                                  [OK]
Compiling: quantum/send_string/send_string.c                                                        [OK]
Compiling: quantum/process_keycode/process_grave_esc.c                                              [OK]
Compiling: quantum/process_keycode/process_space_cadet.c                                            [OK]
Compiling: platforms/avr/drivers/i2c_master.c                                                       [OK]
Archiving: .build/obj_askcorne_default/i2c_master.o                                                 [OK]
Compiling: platforms/avr/drivers/i2c_slave.c                                                        [OK]
Archiving: .build/obj_askcorne_default/i2c_slave.o                                                  [OK]
Compiling: platforms/avr/drivers/serial.c                                                          platforms/avr/drivers/serial.c:120:10: error: #error invalid SOFT_SERIAL_PIN value
 #        error invalid SOFT_SERIAL_PIN value
          ^~~~~
platforms/avr/drivers/serial.c: In function 'soft_serial_target_init':
platforms/avr/drivers/serial.c:275:14: error: 'EIMSK_BIT' undeclared (first use in this function); did you mean 'MOD_BIT'?
     EIMSK |= EIMSK_BIT;
              ^~~~~~~~~
              MOD_BIT
platforms/avr/drivers/serial.c:275:14: note: each undeclared identifier is reported only once for each function it appears in
platforms/avr/drivers/serial.c:276:5: error: 'EICRx' undeclared (first use in this function); did you mean 'EICRA'?
     EICRx &= EICRx_BIT;
     ^~~~~
     EICRA
platforms/avr/drivers/serial.c:276:14: error: 'EICRx_BIT' undeclared (first use in this function); did you mean 'EICRB'?
     EICRx &= EICRx_BIT;
              ^~~~~~~~~
              EICRB
In file included from platforms/avr/drivers/serial.c:15:
platforms/avr/drivers/serial.c: In function 'SERIAL_PIN_INTERRUPT':
platforms/avr/drivers/serial.c:397:5: error: 'SERIAL_PIN_INTERRUPT' appears to be a misspelled 'signal' handler, missing '__vector' prefix [-Werror=misspelled-isr]
 ISR(SERIAL_PIN_INTERRUPT) {
     ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
 [ERRORS]
 | 
 | 
 | 
gmake[1]: *** [builddefs/common_rules.mk:360: .build/obj_askcorne_default/serial.o] Error 1
gmake: *** [Makefile:414: askcorne:default] Error 1
Make finished with errors
